# asm-emulator

./: .env.example  .gitignore  COMPLETE_GUIDE.md  INSTALL.bat  INSTALL.sh  QUICK_START.md  README.md  README_COMPLETE.md  SETUP_GUIDE.md  hello.asm  hello.rs  icon.py  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
public/: manifest.json
scripts/: patch-android-signing.py  set-windows-variant.py
src/: App.jsx  AppFinal.backup.jsx  AppFinal.jsx  index.css  main-final.jsx  main.js  main.jsx  preload.js  sw.js
src-tauri/: .cargo-ok  2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityBar.jsx  BottomPanel.jsx  DebuggerWidget.jsx  FileExplorer.jsx  IconSet.jsx  SettingsModal.jsx  SplashScreen.jsx  TabBar.jsx  TemplateBrowser.jsx  WorkspaceExplorer.jsx
src/data/: InstructionSet8086.js
src/emulator/: Emulator8086.js  Emulator8086Enhanced.js  test-calculator.mjs
src/hooks/: useAppUpdater.jsx
src/styles/: ActivityBar.css  App.css  AppFinal-refactored.css  AppFinal.css  AppMobile.css  BottomPanel.css  FileExplorer.css  SplashScreen.css  TabBar.css  mobile-fullscreen.css  mobile-safe-areas.css
web/: app.js  index.html  styles.css
