[package]
name = "renance-playground"
version = "0.1.0"
description = "8086 ASM Emulator Playground"
authors = ["Resolute Femi"]
edition = "2021"

# Required by Tauri v2 mobile (Android/iOS): the Rust code is compiled as a
# `cdylib` and invoked via `#[tauri::mobile_entry_point]` in lib.rs.
# Desktop builds also use this lib via `main.rs` calling `renance_playground_lib::run()`.
[lib]
name = "renance_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
