[package]
name = "renance-playground"
version = "0.1.0"
description = "8086 ASM Emulator Playground"
authors = ["Resolute Femi"]
edition = "2021"

# Required by Tauri v2 mobile (Android/iOS): the Rust code is compiled as a
# `cdylib` and invoked via `#[tauri::mobile_entry_point]` in lib.rs.
# Desktop builds also use this lib via `main.rs` calling `renance_playground_lib::run()`.
[lib]
name = "renance_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
# global-shortcut is desktop-only at runtime (see the cfg guard in lib.rs),
# but it MUST be a regular dependency so Tauri's capability validator can
# resolve `global-shortcut:default` during mobile builds too.
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
